# Fair-Way

./: .gitignore  README.md  default.conf  docker-compose-dev.yaml  docker-compose-evaluate.yaml  docker-compose-prod.yaml  docker-compose_dev.yaml  docker-compose_prod.yaml  dockerfile_dev  dockerfile_eval  dockerfile_prod  nginx.conf  redis.conf  wait_for_ollama.sh
backend/: .env.template  bakar.py  celery_tasks.py  config.py  eval_tasks.py  evaluate.py  log_config.py  main.py  pyproject.toml  resp_models.py  routes.py  tests.html  utils.py
backend/Evaluation/: README1.md  README2.md  eval_config.py  eval_utils.py  file_handler.py  json_evaluators.py  llm_performance_metrics.csv  online-examples.csv  test_executor.py  testing.py
backend/Evaluation/reference_outputs/: Psychology_10086789.json  Psychology_11094549.json  Psychology_1182763.json  biodiversity_14452998.json  biodiversity_3261807.json  biodiversity_7131005.json  climate_science_8425715.json  climate_science_dryad.qz612jmq2.json  climate_science_dryad.s1rn8pkcq.json  finance_14410427.json  finance_14731832.json  finance_dryad.k78g1.json  superconductivity_10613470.json  superconductivity_6673464.json  superconductivity_7809254.json
backend/fair_analysis/: fair_analyzer.py  model.py  splitter.py
backend/fair_analysis/fair_metrics/: MetricBase.py  TestBase.py  utils.py
backend/fair_analysis/fair_metrics/FsF_A1_01M/: metric.py
backend/fair_analysis/fair_metrics/FsF_F1_01D/: metric.py
backend/tests/: test_content_splitters.py
backend/utils/: basic_utils.py  db_utils.py  network_utils.py
(+81 files in other folders)
